# websocket_learning

./: CMakeLists.txt  README.md  build.sh  clean.sh
include/: webcam_capture.h  websocket_server.h
src/: main.cpp  webcam_capture.cpp  websocket_server.cpp
www/: index.html
